2005-12-01  Matthew Gregan  <kinetik@orcon.net.nz>

	* database.cc (database::version, database::migrate): Improve
	error handling where user has supplied the path to a non-existant
	database file.  Submitted by Neil Conway.
	* win32/fs.cc (rename_clobberingly_impl): Improve error handling
	around LoadLibrary call.
	* lua/{lvm.c,lgc.c,lapi.c}: Lua post-5.0.2 bugfixes from
	http://www.lua.org/bugs.html.  Submitted by Alex Queiroz.

2005-11-29  Matt Johnston  <matt@ucc.asn.au>

	* Makefile.am: add PCH_FLAGS only when compiling monotone and
	unit_tests objects, not for libs.
	* pch.hh: define __STDC_CONSTANT_MACROS as required for UINT32_C.

2005-11-28  Nathaniel Smith  <njs@pobox.com>

	* txt2c.cc (main): Work correctly even on empty files.

2005-11-28  Nathaniel Smith  <njs@pobox.com>

	* schema_migration.cc: Provide more feedback while 'db migrate' is
	running.

2005-11-28  Matthew Gregan  <kinetik@orcon.net.nz>

	* HACKING: Make a note of the fact that we kill 'monotone serve'
	processes with a SIGSEGV.
	* tests/README: Minor cleanup, mention SIGSEGV thing here too.

2005-11-27  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua: Make regexp matching error slightly more
	user-friendly.

2005-11-27  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (diff): Remove OPT_BRANCH from diff's options.

2005-11-27  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* configure.ac: Do not use test's == operator because it is not
	compatible with many implementations; use = instead.

2005-11-27  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* configure.ac, ui.cc: Windows does have sync_with_iostream; the
	problem is that it does not behave correctly on some MinGW versions.
	Properly detect this condition.  Thanks to Matthew Gregan for the
	explanation.

2005-11-27  Matthew Gregan  <kinetik@orcon.net.nz>

	* netxx/address.cxx (parse_uri): Reset URI parser state after
	checking for IPv6 address.

2005-11-27  Matthew Gregan  <kinetik@orcon.net.nz>
